@@ -8,9 +8,6 @@ Spec::Runner.configure do |config|
   config.use_transactional_fixtures = true
   config.use_instantiated_fixtures  = false
   config.fixture_path = RAILS_ROOT + '/spec/fixtures'
-  config.before(:each, :behaviour_type => :controller) do
-    raise_controller_errors
-  end
 
   # You can declare fixtures for each behaviour like this:
   #   describe "...." do
